Regression: NodeSocket.node is None on Node.copy #103321

Closed
opened 2022-12-18 18:21:32 +01:00 by Miguel Pozo · 9 comments
Member

System Information
Operating system: Windows 10

Blender Version
Broken: 3.4.0 Beta, branch: master, commit date: 2022-11-04 20:01, hash: bba6d28942
Worked: 3.4.0 Alpha, branch: master, commit date: 2022-10-28 00:15, hash: 00533de7d5

Caused by: c39eb09ae5
(But that's just an indication of the problem)

Short description of error

NodeSocket.node is None on Node.copy.
The NodeSocket.node property seems to be set after the function has run.

Exact steps for others to reproduce the error

In the Cutom Nodes Python Template, add the following code to the copy function:

for input in self.inputs:
    print(f"Input: {input} | Input Node: {input.node}")

Duplicate one node Shift+D.

Blender 3.3 prints:

Copying from node  <bpy_struct, CustomNodeType("Custom Node.001") at 0x00000240BBE92248>
Input: <bpy_struct, CustomSocketType("Hello") at 0x00000240B1383408> | Input Node: <bpy_struct, CustomNodeType("Custom Node.002") at 0x00000240BBE90488>
Input: <bpy_struct, NodeSocketFloat("World") at 0x00000240B1381C08> | Input Node: <bpy_struct, CustomNodeType("Custom Node.002") at 0x00000240BBE90488>
Input: <bpy_struct, NodeSocketVector("!") at 0x00000240B1380C08> | Input Node: <bpy_struct, CustomNodeType("Custom Node.002") at 0x00000240BBE90488>

Blender 3.4 prints:

Copying from node  <bpy_struct, CustomNodeType("Custom Node.001") at 0x000001B87CDF49C8>
Input: <bpy_struct, CustomSocketType("Hello") at 0x000001B86C613208> | Input Node: None
Input: <bpy_struct, NodeSocketFloat("World") at 0x000001B86C613008> | Input Node: None
Input: <bpy_struct, NodeSocketVector("!") at 0x000001B86C612E08> | Input Node: None

SocketNodeAfterCopy.blend

**System Information** Operating system: Windows 10 **Blender Version** Broken: 3.4.0 Beta, branch: master, commit date: 2022-11-04 20:01, hash: `bba6d28942` Worked: 3.4.0 Alpha, branch: master, commit date: 2022-10-28 00:15, hash: `00533de7d5` Caused by: c39eb09ae5 (But that's just an indication of the problem) **Short description of error** NodeSocket.node is None on Node.copy. The NodeSocket.node property seems to be set after the function has run. **Exact steps for others to reproduce the error** In the `Cutom Nodes` Python Template, add the following code to the `copy` function: ``` for input in self.inputs: print(f"Input: {input} | Input Node: {input.node}") ``` Duplicate one node `Shift+D`. Blender 3.3 prints: ``` Copying from node <bpy_struct, CustomNodeType("Custom Node.001") at 0x00000240BBE92248> Input: <bpy_struct, CustomSocketType("Hello") at 0x00000240B1383408> | Input Node: <bpy_struct, CustomNodeType("Custom Node.002") at 0x00000240BBE90488> Input: <bpy_struct, NodeSocketFloat("World") at 0x00000240B1381C08> | Input Node: <bpy_struct, CustomNodeType("Custom Node.002") at 0x00000240BBE90488> Input: <bpy_struct, NodeSocketVector("!") at 0x00000240B1380C08> | Input Node: <bpy_struct, CustomNodeType("Custom Node.002") at 0x00000240BBE90488> ``` Blender 3.4 prints: ``` Copying from node <bpy_struct, CustomNodeType("Custom Node.001") at 0x000001B87CDF49C8> Input: <bpy_struct, CustomSocketType("Hello") at 0x000001B86C613208> | Input Node: None Input: <bpy_struct, NodeSocketFloat("World") at 0x000001B86C613008> | Input Node: None Input: <bpy_struct, NodeSocketVector("!") at 0x000001B86C612E08> | Input Node: None ``` [SocketNodeAfterCopy.blend](https://archive.blender.org/developer/F14070027/SocketNodeAfterCopy.blend)
Author
Member

Added subscriber: @pragma37

Added subscriber: @pragma37

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Iliya Katushenock changed title from NodeSocket.node is None on Node.copy to Regression: NodeSocket.node is None on Node.copy 2022-12-18 19:04:44 +01:00

Added subscriber: @mod_moder

Added subscriber: @mod_moder

This comment was removed by @mod_moder

*This comment was removed by @mod_moder*

Added subscriber: @HooglyBoogly

Added subscriber: @HooglyBoogly
@HooglyBoogly

This issue was referenced by c79d853e4d

This issue was referenced by c79d853e4d475e0ceb07b43f76b5420663155840

This issue was referenced by 50c7eb14f4

This issue was referenced by 50c7eb14f455de9f932028861899d5d6b6f20527
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Hans Goudey self-assigned this 2022-12-18 21:18:23 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#103321
No description provided.